<resources>
    <string name="app_name">숨고</string>

    <!--    Splash-->
    <string name="splash_hello">오늘도 숨고 하세요!</string>
    <string name="splash_version">3.3.1(373.1)</string>

    <!--    홈-->
    <string name="home_service">숨고 인기 서비스</string>
    <string name="home_chuchen">추천 서비스</string>
    <string name="home_cleangosu">청소의 고수</string>
    <string name="home_popgosu">신규 서비스</string>
    <string name="home_coldgosu">겨울 준비도 숨고와 함께</string>
    <string name="home_cnlalngosu">취미로운 일상</string>

    <!--    bottomNav-->
    <string name="go_home">홈</string>
    <string name="gosu">고수찾기</string>
    <string name="apl_go">받은견적</string>
    <string name="chatt">채팅</string>
    <string name="bot_mypage">마이페이지</string>
    <!--    home-->
    <string name="home_gosu">고수가입</string>
    <string name="home_sogae">딱! 맞는 고수를</string>
    <string name="home_sogae1">소개해드립니다!</string>
    <string name="home_serach">어떤 분야의 전문가를 찾으시나요?</string>


    <!--    로그인-->
    <string name="myprofile_nologin">로그인 후 이용해주세요</string>
    <string name="myprofile_detail">숨고 서비스를 이용하시기 위해\n로그인이 필요합니다.</string>

    <!--    회원가입-->
    <string name="join_detail_cus">고수님에게 도움을 받고 싶어요</string>
    <string name="join_detail_gosu">비즈니스에 맞는 고객을 만나고 싶어요</string>
    <string name="join_detail_yak">이용약관 및 개인정보취급방침에 동의합니다(필수)</string>
    <string name="join_detail_sel_1">고객으로 가입</string>
    <string name="join_detail_sel_2">고수로 가입</string>
    <string name="join_name">이름(실명)을 입력해주세요.</string>
    <string name="join_email">id@soomgo.com</string>
    <string name="join_pwd">영문+숫자 조합 8자리 이상 입력해주세요.</string>
    <string name="join_repwd">비밀번호를 한번 더 입력해주세요.</string>

    <!--    프로필-->
    <string name="detail_actionbar">마이페이지</string>
    <string name="detail_chageuser_cus">고객으로</string>
    <string name="detail_chageuser_gosu">고수로</string>
    <string name="detail_chageuser">전환</string>
    <string name="detail_username">없슴둥</string>
    <string name="detail_gogak">고객님</string>
    <string name="detail_useremail">aaaa@naver.com</string>
    <string name="detail_clean">안전거래</string>
    <string name="detail_rjfosidur">거래 내역</string>

    <!--    계정수정-->
    <string name="upadte_setting">계정 설정</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    수업세부-->
    <string name="study_gosu">활동 고수</string>
    <string name="study_nujeck">누적 요청서</string>
    <string name="study_review_count">리뷰 수</string>


    <!--    고수찾기-->

    <string name="gosu_discoun">10%할인</string>
    <string name="gosu_find">고수찾기</string>
    <string name="gosu_active">최근 활동순</string>
    <string name="gosu_local">지역 선택</string>
    <string name="gosu_service_choice">서비스 선택</string>

    <!--    고수디테일프로필-->
    <string name="detail_gosu_intro">한줄소개</string>
    <string name="detail_gosu_base">기본정보</string>
    <string name="detail_gosu_addbase">추가정보</string>
    <string name="detail_gosu_applyservice">제공 서비스</string>
    <string name="detail_gosu_detailservice">서비스 상세 설명</string>
    <string name="detail_gosu_applybtn">10%할인 견적 요청하기</string>
    <string name="detail_gosu_title">고수 프로필</string>

    <!--    지역선택-->
    <string name="gosu_regin_selc">지역 선택</string>

    <!--    요청서 작성-->
    <string name="apply_title">요청서 작성</string>

</resources>