<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gosu_find"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/main_gosu_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:text="@string/gosu_active"
            android:textColor="@color/gosuga"
            android:textSize="20dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:background="@drawable/coustom_underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3">

        <LinearLayout
            android:id="@+id/search_regin"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow_down_cap" />

            <TextView
                android:id="@+id/search_regin_service"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:text="@string/gosu_local"
                android:textSize="18dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow_down_cap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/gosu_service_choice"
                android:textSize="18dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:paddingBottom="4dp"
        android:background="@drawable/coustom_underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_gosu_rec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:listitem="@layout/gosulist_item" />

</androidx.constraintlayout.widget.ConstraintLayout>