<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/join_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:labelVisibilityMode="labeled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_join">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:text="회원가입"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_newcreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/coustom_signup"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newjoin_toolbar">

                <ImageButton
                    android:id="@+id/linearimg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:background="@color/white"
                    android:src="@drawable/check_box" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_detail_sel_1"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20dp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_detail_cus"
                        android:textSize="15dp">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="95dp"

                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"

                android:background="@drawable/coustom_signup"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <ImageButton
                    android:id="@+id/linearimg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/check_box" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_detail_sel_2"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20dp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_detail_cus"
                        android:textSize="15dp">

                    </TextView>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="이름"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <EditText
                android:id="@+id/join_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_test"
                android:hint="@string/join_name"
                android:inputType="text"
                android:padding="20dp"
                android:paddingStart="8dp"
                android:textSize="15dp">

            </EditText>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="이메일"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/join_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_test"
                android:hint="@string/join_email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:paddingStart="8dp"
                android:textSize="15dp">

            </EditText>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="비밀번호"
                android:textColor="@color/black"
                android:textSize="18dp">

            </TextView>

            <EditText
                android:id="@+id/join_pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_test"
                android:hint="@string/join_pwd"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:textSize="15dp">

            </EditText>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="비밀번호 확인"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/join_repwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_test"
                android:hint="@string/join_repwd"
                android:inputType="textPassword"
                android:padding="20dp"
                android:paddingStart="8dp"
                android:textSize="15dp" />


            <!--                <ImageButton-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="center_vertical"-->
            <!--                    android:background="@color/white"-->
            <!--                    android:src="@drawable/checkbox" />-->

            <!--                <TextView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginStart="8dp"-->
            <!--                    android:text="@string/join_detail_yak" />-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/join_yark"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/btn_yark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/join_detail_yak" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btn_newcreate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#bebdbf"
        android:text="회원가입"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>